# HAC

./: Final_Codes.ipynb  README.md
2D_Convolutie/2D_Convolutie/: .cproject  .project  hls.app
2D_Convolutie/2D_Convolutie/.apc/: autopilot.apfmapping
2D_Convolutie/2D_Convolutie/solution1/: solution1.directive
2D_Convolutie/2D_Convolutie/source/: 2D_Convolutie.c  2D_Convolutie.h  2D_Convolutie_tb.c
Convolution/: Convolution.xpr
Convolution/Convolution.cache/wt/: webtalk_pa.xml
Convolution/Convolution.ip_user_files/mem_init_files/: Convolution.tcl
Convolution/Convolution.runs/.jobs/: vrs_config_5.xml  vrs_config_6.xml
Convolution/Convolution.runs/design_1_auto_pc_2_synth_1/: design_1_auto_pc_2.tcl  design_1_auto_pc_2.vds  vivado.jou
Convolution/Convolution.runs/design_1_auto_pc_3_synth_1/: design_1_auto_pc_3.tcl  dont_touch.xdc  gen_run.xml  vivado.pb
Convolution/Convolution.runs/design_1_auto_us_1_synth_1/: design_1_auto_us_1.tcl  vivado.jou  vivado.pb
Convolution/Convolution.runs/design_1_processing_system7_0_0_synth_1/: vivado.pb
Convolution/Convolution.runs/design_1_rst_ps7_0_50M_0_synth_1/: vivado.pb
IP's/MaxPooling/: component.xml
IP's/convolution/: component.xml
Vitis HLS/2D_Convolutie/: .gitignore  .vitis_hls_log_all.xml
Vitis HLS/Max_Pooling/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
Vitis HLS/Min_Pooling/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
Vivado/Convolution/Convolution.ip_user_files/sim_scripts/design_1/vcs/: CMakeLists.txt
Vivado/Max_Pooling/: Max_Pooling.xpr
Vivado/MinPooling/: MinPooling.xpr
(+610 files in other folders)
